force-app/main/default/objects/IT_Request__c/IT_Request__c.object-meta.xml
<CustomObject>
    <label>Request</label>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>