force-app/main/default/objects/IT_Request__c/fields/IT_ABI_CAB__c.field-meta.xml
<CustomField>
    <fullName>IT_ABI_CAB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ABI/CAB</label>
    <referenceTo>IT_ABI_CAB__c</referenceTo>
    <relationshipLabel>Richieste</relationshipLabel>
    <relationshipName>Richieste</relationshipName>
    <type>Lookup</type>
</CustomField>