force-app/main/default/objects/IT_Request__c/fields/IT_ABI_F__c.field-meta.xml
<CustomField>
    <fullName>IT_ABI_F__c</fullName>
    <formula>IF( IT_ABI__c != null, IT_ABI__c,   IT_Financial_Center__r.ER_Bank_Account__r.IT_ABI__c  )</formula>
    <label>ABI F</label>
    <type>Text</type>
</CustomField>