force-app/main/default/objects/IT_Request__c/fields/IT_Acceptance_User__c.field-meta.xml
<CustomField>
    <fullName>IT_Acceptance_User__c</fullName>
    <label>Acceptance User</label>
    <length>8</length>
    <type>Text</type>
</CustomField>