force-app/main/default/objects/IT_Request__c/fields/IT_Accepted_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Accepted_Request_Date__c</fullName>
    <label>Accepted Request Date</label>
    <type>Date</type>
</CustomField>