force-app/main/default/objects/IT_Request__c/fields/IT_Additional_Locality__c.field-meta.xml
<CustomField>
    <fullName>IT_Additional_Locality__c</fullName>
    <label>Additional Locality</label>
    <length>40</length>
    <type>Text</type>
</CustomField>