force-app/main/default/objects/IT_Request__c/fields/IT_Address__c.field-meta.xml
<CustomField>
    <fullName>IT_Address__c</fullName>
    <label>Address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>