force-app/main/default/objects/IT_Request__c/fields/IT_Address_Change__c.field-meta.xml
<CustomField>
    <fullName>IT_Address_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Change</label>
    <type>Checkbox</type>
</CustomField>