force-app/main/default/objects/IT_Request__c/fields/IT_Administrative_Group__c.field-meta.xml
<CustomField>
    <fullName>IT_Administrative_Group__c</fullName>
    <label>Administrative Group</label>
    <length>6</length>
    <type>Text</type>
</CustomField>