force-app/main/default/objects/IT_Request__c/fields/IT_Attendance_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Attendance_Type__c</fullName>
    <label>Attendance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Attendance_Type</valueSetName>
    </valueSet>
</CustomField>