force-app/main/default/objects/IT_Request__c/fields/IT_Authorization_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Authorization_Date__c</fullName>
    <label>Authorization Date</label>
    <type>Date</type>
</CustomField>