force-app/main/default/objects/IT_Request__c/fields/IT_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>IT_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>ER_Bank_Account__c</referenceTo>
    <relationshipLabel>Richieste</relationshipLabel>
    <relationshipName>Richieste</relationshipName>
    <type>Lookup</type>
</CustomField>