force-app/main/default/objects/IT_Request__c/fields/IT_Bank_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Bank_Account_Code__c</fullName>
    <label>Bank Account Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Bank_Account_Code</valueSetName>
    </valueSet>
</CustomField>