force-app/main/default/objects/IT_Request__c/fields/IT_Bank_Account_Code_F__c.field-meta.xml
<CustomField>
    <fullName>IT_Bank_Account_Code_F__c</fullName>
    <formula>IF( NOT(ISPICKVAL ( IT_Bank_Account_Code__c , &#39;&#39;)) , TEXT (IT_Bank_Account_Code__c) , TEXT(  IT_Financial_Center__r.ER_Bank_Account__r.IT_Bank_Account_Code__c   ) )</formula>
    <label>Bank Account Code F</label>
    <type>Text</type>
</CustomField>