force-app/main/default/objects/IT_Request__c/fields/IT_Beneficiary_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Beneficiary_Type__c</fullName>
    <label>Beneficiary Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Beneficiary_Type</valueSetName>
    </valueSet>
</CustomField>