force-app/main/default/objects/IT_Request__c/fields/IT_Billing_Company_Name_R1__c.field-meta.xml
<CustomField>
    <fullName>IT_Billing_Company_Name_R1__c</fullName>
    <label>Billing Company Name R1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>