force-app/main/default/objects/IT_Request__c/fields/IT_Billing_Company_Name_R1_F__c.field-meta.xml
<CustomField>
    <fullName>IT_Billing_Company_Name_R1_F__c</fullName>
    <formula>IF( IT_Billing_Company_Name_R1__c != null,IT_Billing_Company_Name_R1__c,  IT_Financial_Center__r.IT_Billing_Company_Name_R1__c  )</formula>
    <label>Billing Company Name R1 F</label>
    <type>Text</type>
</CustomField>