force-app/main/default/objects/IT_Request__c/fields/IT_Billing_Company_Name_R2__c.field-meta.xml
<CustomField>
    <fullName>IT_Billing_Company_Name_R2__c</fullName>
    <label>Billing Company Name R2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>