force-app/main/default/objects/IT_Request__c/fields/IT_Billing_Company_Name_R3_F__c.field-meta.xml
<CustomField>
    <fullName>IT_Billing_Company_Name_R3_F__c</fullName>
    <formula>IF( IT_Extended_Company_Name__c != null, IT_Extended_Company_Name__c,  IT_Financial_Center__r.IT_Extended_Company_Name__c )</formula>
    <label>Billing Company Name R3 F</label>
    <type>Text</type>
</CustomField>