force-app/main/default/objects/IT_Request__c/fields/IT_Bond__c.field-meta.xml
<CustomField>
    <fullName>IT_Bond__c</fullName>
    <label>Bond</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>