force-app/main/default/objects/IT_Request__c/fields/IT_CAB_F__c.field-meta.xml
<CustomField>
    <fullName>IT_CAB_F__c</fullName>
    <formula>IF( IT_CAB__c != null, IT_CAB__c,  IT_Financial_Center__r.ER_Bank_Account__r.IT_CAB__c   )</formula>
    <label>CAB F</label>
    <type>Text</type>
</CustomField>