force-app/main/default/objects/IT_Request__c/fields/IT_Campaign_End_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Campaign_End_Date__c</fullName>
    <label>Campaign End Date</label>
    <type>Date</type>
</CustomField>