force-app/main/default/objects/IT_Request__c/fields/IT_Card_Cost__c.field-meta.xml
<CustomField>
    <fullName>IT_Card_Cost__c</fullName>
    <label>Card Cost</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>