force-app/main/default/objects/IT_Request__c/fields/IT_Card_Cost_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>IT_Card_Cost_Billing_Frequency__c</fullName>
    <label>Card Cost Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>MONTHLY (end of month)</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>QUARTERLY (31/3, 30/6, 30/9, 31/12)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>HALF (30/6; 31/12)</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>ANNUAL (31/12)</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>ISSUE (IN THE ORDER OF GOOD)</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>NEVER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>