force-app/main/default/objects/IT_Request__c/fields/IT_CC__c.field-meta.xml
<CustomField>
    <fullName>IT_CC__c</fullName>
    <label>CC</label>
    <length>16</length>
    <type>Text</type>
</CustomField>