force-app/main/default/objects/IT_Request__c/fields/IT_Check_Iban__c.field-meta.xml
<CustomField>
    <fullName>IT_Check_Iban__c</fullName>
    <label>Check Iban</label>
    <length>2</length>
    <type>Text</type>
</CustomField>