force-app/main/default/objects/IT_Request__c/fields/IT_CIG__c.field-meta.xml
<CustomField>
    <fullName>IT_CIG__c</fullName>
    <label>CIG</label>
    <length>10</length>
    <type>Text</type>
</CustomField>