force-app/main/default/objects/IT_Request__c/fields/IT_CIG_F__c.field-meta.xml
<CustomField>
    <fullName>IT_CIG_F__c</fullName>
    <formula>IF( IT_CIG__c != null, IT_CIG__c  , IT_Financial_Center_Action__r.IT_CIG__c )</formula>
    <label>CIG F</label>
    <type>Text</type>
</CustomField>