force-app/main/default/objects/IT_Request__c/fields/IT_CIN__c.field-meta.xml
<CustomField>
    <fullName>IT_CIN__c</fullName>
    <label>CIN</label>
    <length>1</length>
    <type>Text</type>
</CustomField>