force-app/main/default/objects/IT_Request__c/fields/IT_City__c.field-meta.xml
<CustomField>
    <fullName>IT_City__c</fullName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>