force-app/main/default/objects/IT_Request__c/fields/IT_Commission_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>IT_Commission_Discount_Percentage__c</fullName>
    <formula>IT_Commission_Percentage__c - IT_Discount_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission/Discount Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>