force-app/main/default/objects/IT_Request__c/fields/IT_Commission_Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Commission_Discount_Type__c</fullName>
    <formula>IF(
NOT(ISBLANK(TEXT(IT_Commission_Type__c))),
CASE(TEXT(IT_Commission_Type__c),
&quot;0&quot;,&quot;Commissione Esistente&quot;,
&quot;1&quot;,&quot;Esente da Commissione&quot;,
&quot;&quot;),
IF(NOT(ISBLANK(TEXT(IT_Discount_Type__c ))),
CASE(TEXT( IT_Discount_Type__c),
&quot;2&quot;,&quot;SCONTO CON N. CREDITO A PARTE&quot;,
&quot;3&quot;,&quot;SCONTO IN FATTURA&quot;,
&quot;4&quot;,&quot;SCONTO IN FATTURA SU VAL.BUONO&quot;,
&quot;A&quot;,&quot;SCONTO PERIODICO ANNUALE&quot;,
&quot;B&quot;,&quot;SCONTO PERIODICO BIMESTRALE&quot;,
&quot;Q&quot;,&quot;SCONTO PERIODICO QUADRIMESTRALE&quot;,
&quot;S&quot;,&quot;SCONTO PERIODICO SEMESTRALE&quot;,
&quot;T&quot;,&quot;SCONTO PERIODICO TRIMESTRALE&quot;,

&quot;&quot;),&#39;&#39;)

)</formula>
    <label>Commission/Discount Type</label>
    <type>Text</type>
</CustomField>