force-app/main/default/objects/IT_Request__c/fields/IT_Commission_Percentage__c.field-meta.xml
<CustomField>
    <fullName>IT_Commission_Percentage__c</fullName>
    <label>Commission Percentage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>