force-app/main/default/objects/IT_Request__c/fields/IT_Commission_Percentage_F__c.field-meta.xml
<CustomField>
    <fullName>IT_Commission_Percentage_F__c</fullName>
    <formula>IF( IT_Commission_Percentage__c != null, IT_Commission_Percentage__c,  IT_Financial_Center__r.IT_Contract__r.IT_Commission_Percentage__c  )</formula>
    <label>Commission Percentage F</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>