force-app/main/default/objects/IT_Request__c/fields/IT_Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Commission_Type__c</fullName>
    <label>Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>EXISTING COMMISSION</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>COMMISSION-FREE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>