force-app/main/default/objects/IT_Request__c/fields/IT_Company_Name_Change__c.field-meta.xml
<CustomField>
    <fullName>IT_Company_Name_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Name Change</label>
    <type>Checkbox</type>
</CustomField>