force-app/main/default/objects/IT_Request__c/fields/IT_Concurrency_F__c.field-meta.xml
<CustomField>
    <fullName>IT_Concurrency_F__c</fullName>
    <formula>IF(NOT(ISPICKVAL( IT_Concurrency__c , &#39;&#39;)), TEXT(IT_Concurrency__c),  TEXT(IT_Financial_Center__r.IT_Concurrency__c ))</formula>
    <label>Concurrency F</label>
    <type>Text</type>
</CustomField>