force-app/main/default/objects/IT_Request__c/fields/IT_Contract__c.field-meta.xml
<CustomField>
    <fullName>IT_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Richieste</relationshipLabel>
    <relationshipName>Richieste</relationshipName>
    <type>Lookup</type>
</CustomField>