force-app/main/default/objects/IT_Request__c/fields/IT_Contract_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>IT_Contract_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Line Item</label>
    <referenceTo>ER_ContractLineItem__c</referenceTo>
    <relationshipLabel>Richieste</relationshipLabel>
    <relationshipName>Richieste</relationshipName>
    <type>Lookup</type>
</CustomField>