force-app/main/default/objects/IT_Request__c/fields/IT_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_Contract_Number__c</fullName>
    <label>Contract Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>