force-app/main/default/objects/IT_Request__c/fields/IT_Contract_Progressive__c.field-meta.xml
<CustomField>
    <fullName>IT_Contract_Progressive__c</fullName>
    <label>Contract Progressive</label>
    <length>4</length>
    <type>Text</type>
</CustomField>