force-app/main/default/objects/IT_Request__c/fields/IT_Contract_Renewal_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Contract_Renewal_Type__c</fullName>
    <label>Contract Renewal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>AUTOMATIC RENEWAL</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>NO AUTOMATIC RENEWAL</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>TEMPORARY</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>RENEWABLE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>