force-app/main/default/objects/IT_Request__c/fields/IT_Contract_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Contract_Sign_Date__c</fullName>
    <label>Contract Sign Date</label>
    <type>Date</type>
</CustomField>