force-app/main/default/objects/IT_Request__c/fields/IT_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Contract_Start_Date__c</fullName>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>