force-app/main/default/objects/IT_Request__c/fields/IT_Contract_Start_Date_F__c.field-meta.xml
<CustomField>
    <fullName>IT_Contract_Start_Date_F__c</fullName>
    <formula>IF( IT_Contract_Start_Date__c != null, IT_Contract_Start_Date__c ,  IT_Financial_Center__r.IT_Contract__r.StartDate )</formula>
    <label>Contract Start Date F</label>
    <type>Date</type>
</CustomField>