force-app/main/default/objects/IT_Request__c/fields/IT_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Contract_Type</valueSetName>
    </valueSet>
</CustomField>