force-app/main/default/objects/IT_Request__c/fields/IT_Contractual_Particularities__c.field-meta.xml
<CustomField>
    <fullName>IT_Contractual_Particularities__c</fullName>
    <label>Contractual Particularities</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>