force-app/main/default/objects/IT_Request__c/fields/IT_Country__c.field-meta.xml
<CustomField>
    <fullName>IT_Country__c</fullName>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>