force-app/main/default/objects/IT_Request__c/fields/IT_Date_presence__c.field-meta.xml
<CustomField>
    <fullName>IT_Date_presence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Date presence</label>
    <type>Checkbox</type>
</CustomField>