force-app/main/default/objects/IT_Request__c/fields/IT_Delivery_Date_Bond__c.field-meta.xml
<CustomField>
    <fullName>IT_Delivery_Date_Bond__c</fullName>
    <label>Delivery Date Bond</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>FIRST DAY OF MONTH CALCULATION</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>INSERTION DATE CALCULATION</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>