force-app/main/default/objects/IT_Request__c/fields/IT_Delivery_Fixed_Day__c.field-meta.xml
<CustomField>
    <fullName>IT_Delivery_Fixed_Day__c</fullName>
    <label>Delivery Fixed Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>