force-app/main/default/objects/IT_Request__c/fields/IT_Discount_Percentage_2__c.field-meta.xml
<CustomField>
    <fullName>IT_Discount_Percentage_2__c</fullName>
    <label>Discount Percentage 2</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>