force-app/main/default/objects/IT_Request__c/fields/IT_Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Discount_Type__c</fullName>
    <label>Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>DISCOUNT WITH N. CREDIT PART A</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>DISCOUNT ON BILL</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>DISCOUNT ON BILL ON VAL.BUONO</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>PERIODIC ANNUAL DISCOUNT</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>DISCOUNT BI-MONTHLY MAGAZINE</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>DISCOUNT MAGAZINE QUADRIMESTRAL</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>DISCOUNT PERIODIC HALF</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>DISCOUNT QUARTERLY MAGAZINE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>