force-app/main/default/objects/IT_Request__c/fields/IT_Discount_Type_F__c.field-meta.xml
<CustomField>
    <fullName>IT_Discount_Type_F__c</fullName>
    <formula>IF( NOT(ISPICKVAL (  IT_Discount_Type__c  , &#39;&#39;)) , TEXT (IT_Discount_Type__c) , TEXT(  IT_Financial_Center__r.IT_Contract__r.IT_Discount_Type__c  ) )</formula>
    <label>Discount Type F</label>
    <type>Text</type>
</CustomField>