force-app/main/default/objects/IT_Request__c/fields/IT_Discount_Validity_Date_3__c.field-meta.xml
<CustomField>
    <fullName>IT_Discount_Validity_Date_3__c</fullName>
    <label>Discount Validity Date 3</label>
    <type>Date</type>
</CustomField>