force-app/main/default/objects/IT_Request__c/fields/IT_Employee_Number_F__c.field-meta.xml
<CustomField>
    <fullName>IT_Employee_Number_F__c</fullName>
    <formula>IF( IT_Employee_Number__c != null, IT_Employee_Number__c,  IT_Financial_Center__r.IT_Employee_Number__c  )</formula>
    <label>Employee Number F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>