force-app/main/default/objects/IT_Request__c/fields/IT_Expiration_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Expiration_Contract_Date__c</fullName>
    <label>Expiration Contract Date</label>
    <type>Date</type>
</CustomField>