force-app/main/default/objects/IT_Request__c/fields/IT_Expiration_Contract_Date_F__c.field-meta.xml
<CustomField>
    <fullName>IT_Expiration_Contract_Date_F__c</fullName>
    <formula>IF( IT_Expiration_Contract_Date__c != null,IT_Expiration_Contract_Date__c,   IT_Financial_Center__r.IT_Contract__r.IT_Expiration_Contract_Date__c   )</formula>
    <label>Expiration Contract Date F</label>
    <type>Date</type>
</CustomField>