force-app/main/default/objects/IT_Request__c/fields/IT_Extended_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>IT_Extended_Company_Name__c</fullName>
    <label>Extended Company Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>