force-app/main/default/objects/IT_Request__c/fields/IT_Extradiscount__c.field-meta.xml
<CustomField>
    <fullName>IT_Extradiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extradiscount</label>
    <type>Checkbox</type>
</CustomField>