force-app/main/default/objects/IT_Request__c/fields/IT_Extradiscount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>IT_Extradiscount_Percentage__c</fullName>
    <label>Extradiscount Percentage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>