force-app/main/default/objects/IT_Request__c/fields/IT_Extradiscount_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Extradiscount_Type__c</fullName>
    <label>Extradiscount Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>