force-app/main/default/objects/IT_Request__c/fields/IT_Fax__c.field-meta.xml
<CustomField>
    <fullName>IT_Fax__c</fullName>
    <label>Fax</label>
    <length>16</length>
    <type>Text</type>
</CustomField>