force-app/main/default/objects/IT_Request__c/fields/IT_Financial_Center__c.field-meta.xml
<CustomField>
    <fullName>IT_Financial_Center__c</fullName>
    <label>Financial Center</label>
    <referenceTo>ER_Financial_Center__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>