force-app/main/default/objects/IT_Request__c/fields/IT_Financial_Center_Action__c.field-meta.xml
<CustomField>
    <fullName>IT_Financial_Center_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Center</label>
    <referenceTo>ER_Financial_Center__c</referenceTo>
    <relationshipLabel>Richieste Modifica Condizioni (Financial Center)</relationshipLabel>
    <relationshipName>Richieste_Modifica_Condizioni</relationshipName>
    <type>Lookup</type>
</CustomField>