force-app/main/default/objects/IT_Request__c/fields/IT_Flexben_Fee_Cost__c.field-meta.xml
<CustomField>
    <fullName>IT_Flexben_Fee_Cost__c</fullName>
    <label>Flexben Fee Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>