force-app/main/default/objects/IT_Request__c/fields/IT_Flexben_Fee_Frequency__c.field-meta.xml
<CustomField>
    <fullName>IT_Flexben_Fee_Frequency__c</fullName>
    <label>Flexben Fee Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>02</fullName>
                <label>ANNUAL</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>BIENNIAL</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>TRIENNIAL</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>QUADRENNIAL</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>FIVE YEAR</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>DECENNIAL</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>QUARTERLY</label>
            </value>
            <value>
                <fullName>01</fullName>
                <isActive>false</isActive>
                <label>FORTNIGHTLY</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>